--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,5 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
-      - run: make deploy-docs
+          python-version: 3.12
+      - run: |
+          pip install poetry
+          poetry install
+          make deploy-docs
